manifests/deploy-istio.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: stock-quote
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6abbe7c7c508e6dcbd844f45653076c0506b2bb092ac9354362b8dc696129258","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: stock-quote
        solution: stock-trader
    spec:
      containers:
      - env:
        - name: REDIS_URL
          valueFrom:
            secretKeyRef:
              key: url
              name: redis
        - name: QUANDL_KEY
          valueFrom:
            secretKeyRef:
              key: quandl-key
              name: redis
        image: stock-quote:latest
        imagePullPolicy: Always
        name: stock-quote
        ports:
        - containerPort: 9080
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - sleep
        - --drainDuration
        - 2s
        - --parentShutdownDuration
        - 3s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 1s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy:0.5.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: "0"
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: stock-quote-service
  labels:
    app: stock-quote
spec:
  type: NodePort
  ports:
    - port: 9080
#     nodePort: 31002
  selector:
    app: stock-quote
---
#Configure the ingress 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /stock-quote
  name: stock-quote-ingress
spec:
  rules:
  - http:
      paths:
      - path: /stock-quote
        backend:
          serviceName: stock-quote-service
          servicePort: 9080
---
